--- a/index.html
+++ b/index.html
@@ -416,10 +416,33 @@ const chatLog = document.getElementById('chatLog');
 const input = document.getElementById('userInput');
 
 const triggers = {
-  precio: 'MaxiQueen OS: Los planes disponibles son Starter $49, Pro $99 y Elite $199 por mes.',
-  contacto: 'MaxiQueen OS: Puedes contactarnos vía WhatsApp, Instagram, Facebook o YouTube.',
-  onboarding: 'MaxiQueen OS: Vamos a organizar esto primero. ¿Quieres que te guíe paso a paso?',
-  comunidad: 'MaxiQueen OS: La Comunidad MAXIQUEEN es un espacio seguro con sesiones en vivo y seguimiento humano.'
+  precio: 'MaxiQueen OS: Los planes disponibles son Starter $49, Pro $99 y Elite $199 por mes. No son plantillas: cada plan es un sistema funcional que evoluciona contigo.',
+  
+  contacto: 'MaxiQueen OS: Puedes contactarnos vía WhatsApp para atención directa, o seguir el contenido educativo en Instagram, TikTok, YouTube y Facebook.',
+  
+  onboarding: 'MaxiQueen OS: Primero entendemos tu situación real, luego organizamos, y solo después ejecutamos. El orden es parte del sistema.',
+  
+  comunidad: 'MaxiQueen OS: La Comunidad MAXIQUEEN incluye acompañamiento humano, sesiones estratégicas y acceso a recursos prácticos para avanzar sin improvisar.',
+
+  que_es: 'MaxiQueen OS es un sistema operativo digital para convertir ideas, historias y negocios en activos digitales rentables. No es solo marketing ni solo tecnología.',
+
+  como_funciona: 'MaxiQueen OS funciona en fases: diagnóstico del proyecto, organización estratégica, ejecución técnica, automatización y optimización continua.',
+
+  para_quien: 'MaxiQueen OS es para emprendedores, creadores de contenido, marcas personales y personas que necesitan orden, claridad y dirección digital.',
+
+  diferencia: 'A diferencia de agencias o freelancers, MaxiQueen OS no vende tareas sueltas. Diseña sistemas que trabajan incluso cuando no estás.',
+
+  tecnologia: 'JavaScript es el cuerpo del sistema, Python es la mente estratégica y tú eres la conciencia que toma decisiones.',
+
+  vision: 'La visión de MaxiQueen OS es evolucionar hacia una plataforma integral con asistentes inteligentes, hosting propio, sistemas de venta y comunidad educativa.',
+
+  legal: 'El módulo legal básico es informativo y busca orden documental inicial. No reemplaza asesoría jurídica profesional.',
+
+  contenido: 'El módulo creativo incluye storytelling, guiones, análisis de narrativa y contenido diseñado para conectar y vender sin forzar.',
+
+  automatizacion: 'La automatización en MaxiQueen OS es real: despliegues, flujos, estructura digital y procesos que reducen errores humanos.',
+
+  filosofia: 'MaxiQueen OS sigue una regla clara: sistema antes que herramientas, orden antes que automatizar.'
 };
 
 const phrases = [
@@ -467,3 +490,4 @@ function toggleTheme(){
 
 </body>
 </html>
+
